--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
             </div>
         </div>
     </header>
+<!-- hero section starts -->
+    <div class="herosection">
+        <div id="herocontent">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. 
+        <a href="https://www.amazon.in/" id="herolink">Click here to go to amazon.in</a></div>
+    </div>
 </body>
 </html>
