--- a/index.html
+++ b/index.html
@@ -72,5 +72,66 @@
         <div id="herocontent">You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. 
         <a href="https://www.amazon.in/" id="herolink">Click here to go to amazon.in</a></div>
     </div>
+<!-- hero section ends -->
+ <!-- content starts -->
+    <div class="shopsection">
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Get your game on</p>
+                <div style="background-image: url('/box1.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Toys under $25</p>
+                <div style="background-image: url('/box2.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Watches</p>
+                <div style="background-image: url('/box3.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Clothes</p>
+                <div style="background-image: url('/box4.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Electronics</p>
+                <div style="background-image: url('/box5.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Home decor under $50</p>
+                <div style="background-image: url('/box6.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Bedsheets</p>
+                <div style="background-image: url('/box7.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Kitchen</p>
+                <div style="background-image: url('/box8.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+    </div>
+<!-- content ends -->
 </body>
 </html>
