--- a/index.html
+++ b/index.html
@@ -77,61 +77,116 @@
     <div class="shopsection">
         <div class="box">
             <div class="boxcontent">
-                <p id="p1box">Get your game on</p>
-                <div style="background-image: url('/box1.jpg');" id="boximage"></div>
-                <p id="p2box">See more</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="boxcontent">
-                <p id="p1box">Toys under $25</p>
-                <div style="background-image: url('/box2.jpg');" id="boximage"></div>
-                <p id="p2box">See more</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="boxcontent">
-                <p id="p1box">Watches</p>
-                <div style="background-image: url('/box3.jpg');" id="boximage"></div>
-                <p id="p2box">See more</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="boxcontent">
                 <p id="p1box">Clothes</p>
-                <div style="background-image: url('/box4.jpg');" id="boximage"></div>
+                <div style="background-image: url('/box1_image.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Health & Personal Care</p>
+                <div style="background-image: url('/box2_image.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Home Decor</p>
+                <div style="background-image: url('/box3_image.jpg');" id="boximage"></div>
                 <p id="p2box">See more</p>
             </div>
         </div>
         <div class="box">
             <div class="boxcontent">
                 <p id="p1box">Electronics</p>
-                <div style="background-image: url('/box5.jpg');" id="boximage"></div>
+                <div style="background-image: url('/box4_image.jpg');" id="boximage"></div>
                 <p id="p2box">See more</p>
             </div>
         </div>
         <div class="box">
             <div class="boxcontent">
-                <p id="p1box">Home decor under $50</p>
-                <div style="background-image: url('/box6.jpg');" id="boximage"></div>
+                <p id="p1box">Beauty Picks </p>
+                <div style="background-image: url('/box5_image.jpg');" id="boximage"></div>
                 <p id="p2box">See more</p>
             </div>
         </div>
         <div class="box">
             <div class="boxcontent">
-                <p id="p1box">Bedsheets</p>
-                <div style="background-image: url('/box7.jpg');" id="boximage"></div>
+                <p id="p1box">Pet Care</p>
+                <div style="background-image: url('/box6_image.jpg');" id="boximage"></div>
                 <p id="p2box">See more</p>
             </div>
         </div>
         <div class="box">
             <div class="boxcontent">
-                <p id="p1box">Kitchen</p>
-                <div style="background-image: url('/box8.jpg');" id="boximage"></div>
+                <p id="p1box">Toys</p>
+                <div style="background-image: url('/box7_image.jpg');" id="boximage"></div>
+                <p id="p2box">See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="boxcontent">
+                <p id="p1box">Fashion Trends</p>
+                <div style="background-image: url('/box8_image.jpg');" id="boximage"></div>
                 <p id="p2box">See more</p>
             </div>
         </div>
     </div>
 <!-- content ends -->
+ <!-- footer starts  -->
+    <footer>
+        <div class="footerpanel">
+            <div class="panel1">
+                Back to top
+            </div>
+            <div class="panel2">
+                <ul>
+                    <a style="font-weight: 600;">Get to know us</a>
+                    <a>Carrers</a>
+                    <a>Blog</a>
+                    <a>About Amazon</a>
+                    <a>Investor Relation</a>
+                    <a>Amazon Devices</a>
+                    <a>Amazon Science</a>
+                </ul>
+                <ul>
+                    <a style="font-weight: 600;">Get to know us</a>
+                    <a>Carrers</a>
+                    <a>Blog</a>
+                    <a>About Amazon</a>
+                    <a>Investor Relation</a>
+                    <a>Amazon Devices</a>
+                    <a>Amazon Science</a>
+                </ul>
+                <ul>
+                    <a style="font-weight: 600;">Get to know us</a>
+                    <a>Carrers</a>
+                    <a>Blog</a>
+                    <a>About Amazon</a>
+                    <a>Investor Relation</a>
+                    <a>Amazon Devices</a>
+                    <a>Amazon Science</a>
+                </ul>
+                <ul>
+                    <a style="font-weight: 600;">Get to know us</a>
+                    <a>Carrers</a>
+                    <a>Blog</a>
+                    <a>About Amazon</a>
+                    <a>Investor Relation</a>
+                    <a>Amazon Devices</a>
+                    <a>Amazon Science</a>
+                </ul>
+            </div>
+            <div class="panel3">
+                <a href="#">Conditions of Use</a>
+                <a href="#">Privacy Notice</a>
+                <a href="#">Consumer Health Data Privacy Enclosure </a>
+                <a href="#">Your Ads Privacy Choices </a>
+                <p><a href="#">© 1996-2024, Amazon.com, Inc. or its affiliates</a></p>
+            </div>
+            <div class="panel4"></div>
+        </div>
+    </footer>
+<!-- footer ends  -->
 </body>
 </html>
